# Vibe-Coding

./: AGENTS.md  CMakeLists.txt  README.md  TASK.md  tinyim_v3.db  tinyim_v5.db  tinyim_v6.db  tinyim_v7.db  tinyim_v8.db
common/: Config.cpp  Config.h  Logger.cpp  Logger.h
config/: server.conf
docs/: roadmap_v0_v8.md
net/: EpollReactor.cpp  EpollReactor.h  Timer.cpp  Timer.h
protocol/: FramingCodec.cpp  FramingCodec.h  JsonCodec.cpp  JsonCodec.h
service/: AuthService.cpp  AuthService.h  OfflineService.cpp  OfflineService.h  SessionManager.cpp  SessionManager.h
src/: main.cpp  server.cpp  server.h
storage/: MessageDao.cpp  MessageDao.h  SqliteDB.cpp  SqliteDB.h  UserDao.cpp  UserDao.h
